Fixing issue on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ nav {
 }
 
 nav a {
-    width: 25%;
+    width: 24.5%;
     margin: auto;
     display: block;
     cursor: pointer;
